# chatgpt_rs

./: Cargo.toml
src/: chatgpt.rs
