[package]
name = "chatgpt_rs"
version = "0.6.0"
edition = "2021"
description = "ChatGPT API Wrapper"
authors = ["Maxuss <maxus.info.mail@proton.me>"]
license = "MIT"
repository = "https://github.com/Maxuss/chatgpt_rs"
keywords = ["ChatGPT", "OpenAI"]
categories = ["api-bindings"]

[lib]
name = "chatgpt"
path = "./src/chatgpt.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.26", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["serde", "v4"] }
anyhow = "1.0"
thiserror = "1.0"
futures-util = "0.3.27"
bytes = "1.4.0"
eventsource-stream = "0.2.3"

[dev-dependencies]
tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }
